--- a/Parte_1/index.html
+++ b/Parte_1/index.html
@@ -6,6 +6,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="CSS/estilos.css">
         <title>barbería alura</title>
 
     </head>
@@ -13,19 +14,19 @@
 
     <body>
 
-        <h1>Sobre la Barbería Alura</h1>
+        <div id="h1"><h1>Sobre la Barbería Alura</h1></div>
         
-        <p>
+        <divid id="parrafo_1"><p>
             Ubicada en el corazón de la ciudad,<strong> la Barbería Alura </strong>trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente. 
-        </p>
+        </p></divid>
 
-        <p>
+        <div id="parrafo_2"><p>
             <em>Nuestra misión es: <strong>"Proporcionar autoestima y calidad de vida a nuestros clientes"</strong>.</em> 
-        </p>
+        </p></div>
 
-        <p>
+        <div id="parrafo_3"><p>
             Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes. 
-        </p>
+        </p></div>
 
     </body>
 </html>
