--- a/Parte_1/index.html
+++ b/Parte_1/index.html
@@ -13,17 +13,19 @@
 
     <body>
 
+        <a href="https://imgur.com/YPvgQPY"><img id="banner" src="https://i.imgur.com/YPvgQPY.jpg"/></a>
+
         <h1>Sobre la Barbería Alura</h1>
         
-        <p>
+        <p id ="parrafo_1">
             Ubicada en el corazón de la ciudad,<strong> la Barbería Alura </strong>trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente. 
         </p>
 
-        <p>
+        <p id ="parrafo_2">
             <em>Nuestra misión es: <strong>"Proporcionar autoestima y calidad de vida a nuestros clientes"</strong>.</em> 
         </p>
 
-        <p>
+        <p id ="parrafo_3">
             Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes. 
         </p>
 
