creando listas DIferenciales y anexando imagen

--- a/Parte_1/index.html
+++ b/Parte_1/index.html
@@ -13,23 +13,39 @@
 
 
     <body>
-        
+
         <a href="https://imgur.com/YPvgQPY"><img id="banner" src="https://i.imgur.com/YPvgQPY.jpg"/></a>
 
-        <h1>Sobre la Barbería Alura</h1>
-        
+        <div class="principal">
 
-        <p id ="parrafo_1">
-            Ubicada en el corazón de la ciudad,<strong> la Barbería Alura </strong>trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente. 
-        </p>
+            <h1>Sobre la Barbería Alura</h1>
 
-        <p id ="parrafo_2">
-            <em>Nuestra misión es: <strong>"Proporcionar autoestima y calidad de vida a nuestros clientes"</strong>.</em> 
-        </p>
+            <p id ="parrafo_1">
+                Ubicada en el corazón de la ciudad,<strong> la Barbería Alura </strong>trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente. 
+            </p>
 
-        <p id ="parrafo_3">
-            Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes. 
-        </p>
+            <p id ="parrafo_2">
+                <em>Nuestra misión es: <strong>"Proporcionar autoestima y calidad de vida a nuestros clientes"</strong>.</em> 
+            </p>
+
+            <p id ="parrafo_3">
+                Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para así ofrecer a nuestros clientes las últimas tendencias. El atendimiento posee un padrón de excelencia y agilidad, garantizando calidad y satisfacción de nuestros clientes. 
+            </p>
+
+        </div>
+
+        <div class="Diferenciales">
+            <h2>Diferenciales</h2>
+
+            <ul>
+                <li class="items">Atencion personalizada a los clientes.</li>
+                <li class="items">Espacio diferenciado.</li>
+                <li class="items">Localizaión.</li>
+                <li class="items">Profesionales calificados.</li>
+            </ul>
+
+            <a href="https://imgur.com/y8RlqPQ"><img id="img_diferenciales" src="https://i.imgur.com/y8RlqPQ.jpg"/></a>
+        </div>
 
     </body>
 </html>
