--- a/Parte_1/index.html
+++ b/Parte_1/index.html
@@ -14,11 +14,17 @@
 
     <body>
 
+        <header id="encabezados">
+
+            <h1>Barbería Alura</h1>
+
+        </header>
+
         <a href="https://imgur.com/YPvgQPY"><img id="banner" src="https://i.imgur.com/YPvgQPY.jpg"/></a>
 
         <div class="principal">
 
-            <h1>Sobre la Barbería Alura</h1>
+            <h2 class ="titulo-cent">Sobre la Barbería Alura</h2>
 
             <p id ="parrafo_1">
                 Ubicada en el corazón de la ciudad,<strong> la Barbería Alura </strong>trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente. 
@@ -35,7 +41,8 @@
         </div>
 
         <div class="Diferenciales">
-            <h2>Diferenciales</h2>
+
+            <h3 class="titulo-cent">Diferenciales</h3>
 
             <ul>
                 <li class="items">Atencion personalizada a los clientes.</li>
