--- a/Proyecto_Barberia_alura_parte2/productos.html
+++ b/Proyecto_Barberia_alura_parte2/productos.html
@@ -14,11 +14,20 @@
 
            <h1><a href="https://imgur.com/JiS4krJ"><img id="logo-h" src="https://i.imgur.com/JiS4krJ.png"/></a></h1> 
 
-           <ul class="vinculos>
-                <li>Home</li>
-                <li>Productos</li>
-                <li>Contacto</li>
-           </ul>
+           <nav>
+
+                <ul>
+
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+
+            </ul>
+
+           </nav>  
+
+           
+
         </header>
     
     </body>
