--- a/Proyecto_Barberia_alura_parte3/contacto.html
+++ b/Proyecto_Barberia_alura_parte3/contacto.html
@@ -50,7 +50,22 @@
         </header>
 
         <main>
-            <p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
+            <form action="">
+                <br><br><br>
+
+                <label for="nombreapellido">Nombre y Apellido</label>
+                <input type="text" id="nombreapellido">
+
+                <label for="correoElectronico">Correo Electrónico</label>
+                <input type="text" id="correoElectronico">
+
+                <label for="telefono">Teléfono</label>
+                <input type="text" id="telefono">
+                
+                <input type="submit" value="Enviar Formulario">
+                <br><br><br><br>
+            </form>
+
         </main>
 
         <footer>
