agregando clase al boton sudmit y agregando estilo al boton sumit con transicion y hover

--- a/Proyecto_Barberia_alura_parte3/contacto.html
+++ b/Proyecto_Barberia_alura_parte3/contacto.html
@@ -89,7 +89,7 @@
 
                 <label class="checkbox" for=""><input type="checkbox" checked>¿Le gustaria recibir novedades de la Barbería Alura?</label>
 
-                <input type="submit" value="Enviar Formulario">
+                <input class="enviar" type="submit" value="Enviar Formulario">
                 
             </form>
         </main>
