--- a/Proyecto_Barberia_alura_parte3/contacto.html
+++ b/Proyecto_Barberia_alura_parte3/contacto.html
@@ -92,6 +92,28 @@
                 <input class="enviar" type="submit" value="Enviar Formulario">
                 
             </form>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Días</th>
+                        <th>Horario</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Lunes</td>
+                        <td>8am - 8pm</td>
+                    </tr>
+                    <tr>
+                        <td>Miércoles</td>
+                        <td>8am - 8pm</td>
+                    </tr>
+                    <tr>
+                        <td>Viernes</td>
+                        <td>8am - 8pm</td>
+                    </tr>    
+                </tbody>
+            </table>
         </main>
 
         <footer>
