--- a/Proyecto_Barberia_alura_parte4/index.html
+++ b/Proyecto_Barberia_alura_parte4/index.html
@@ -99,7 +99,7 @@
                         <li class="items">Puntualidad.</li>
                         <li class="items">Limpieza.</li>
                     </ul>        
-                    <a href="https://imgur.com/y8RlqPQ"><img id = "img_diferenciales" src="https://i.imgur.com/y8RlqPQ.jpg"/></a>
+                    <a href="https://imgur.com/y8RlqPQ"><img class = "img_diferenciales" src="https://i.imgur.com/y8RlqPQ.jpg"/></a>
                 </div>
                 <div class="video">
                 
