--- a/Proyecto_Barberia_alura_parte4/index.html
+++ b/Proyecto_Barberia_alura_parte4/index.html
@@ -5,7 +5,7 @@
 
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width>
 
         <link rel="stylesheet" href="CSS/reset.css">
         <link rel="stylesheet" href="CSS/style-home.css">
@@ -103,7 +103,7 @@
                 </div>
                 <div class="video">
                 
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </section>
         </main>
